--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <div id="clock">--:--:--</div>
   
   <div id="announced"></div>
+  <div class="credit">Powered by <a href="http://forecast.io/" target="_blank">Forecast</a></div>
   <div id="setting">Setup</div>
   <div id="setupwindow">SETUPWINDOW</div>
 </b>
