--- a/index.html
+++ b/index.html
@@ -20,5 +20,5 @@
   <div class="credit">Powered by <a href="http://forecast.io/" target="_blank">Forecast</a></div>
   <div id="setting">Setup</div>
   <div id="setupwindow">SETUPWINDOW</div>
-</b>
+</body>
 </html>
